# project-planner

./: .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_FIX_REPORT.md  CUSTOM_PROMPTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.otel-collector  MIGRATION_COMPLETE.md  Makefile  OPENAI_AGENTS_MIGRATION.md  PROJECT_DOCUMENTATION.md  PROMPTS.md  README.md  USAGE.md  app-runner-permissions.json  apprunner-service.json  aws-setup.md  debug_agent_memory_access.py  debug_agent_reference.py  debug_chat_flow.py  debug_conversation_context.py  debug_conversation_flow.py  debug_conversation_retrieval.py  debug_conversation_storage.py  debug_exact_analysis.py  debug_fix_verification.py  debug_message_timing.py  debug_reference_analyzer.py  debug_reference_context.py  debug_reference_context_flow.py  debug_simple_reference.py  deploy-backend.sh  docker-compose.dev.yml  docker-compose.yml  final_verification_test.py  migrate_to_openai_agents.py  otel-collector-config.yaml  package-lock.json  (+22 more)
.github/workflows/: deploy.yml
app/: langgraph_runner.py  main.py  openai_agents_runner.py  user_registry.py
app/config/: feature_flags.json
app/core/: __init__.py  config.py  cors_config.py  (+9 more)
cleanup_reports/: phase5_cleanup_summary_20250811_094758.json
prompts/: chat_agent.md  conversational_nai_agent.md  info_agent.md  project_planner.md
scripts/: conversation_backup.py  conversation_data_migration.py  legacy_cleanup.py  system_validation.py  test_phase1_infrastructure.py  test_phase2_unified_memory.py
tests/: conftest.py  test_core.py  test_simple.py
validation_reports/: phase4_validation_report.md
web/: next.config.ts  package-lock.json  package.json
(+83 files in other folders)
