[tool.poetry]
name = "planner-bot"
version = "0.1.0"
description = "AI-powered project planning bot with markdown memory"
authors = ["Project Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.66"
langchain = "^0.3.26"
langchain-text-splitters = "^0.3.8"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"
pydantic = "^2.5.0"
filelock = "^3.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line-length = 88